optimize core
