# app/Generators/Backend/ControllerGenerator.php
@@ -36,7 +36,7 @@ Class ControllerGenerator extends BaseGenerator
         $templateData = str_replace('{{CONTROLLER_CLASS}}', $model['name'], $templateData);
         $templateData = str_replace('{{MODAL_CLASS}}', $model['name'], $templateData);
         $templateData = str_replace('{{LIMIT}}', $model['limit'], $templateData);
-        $templateData = str_replace('{{COLUMN_SORT}}', '[' . $this->generateColumnSoft($fields) . ']', $templateData);
+        $templateData = str_replace('{{COLUMN_SORT}}', '[' . $this->generateColumnSoft($fields, $model) . ']', $templateData);
         $templateData = str_replace('{{COLUMN_SEARCH}}', '[' . $this->generateColumnSearch($fields) . ']', $templateData);
         $templateData = str_replace('{{COLUMN_RELATIONSHIP}}', '[]', $templateData);
         $templateData = str_replace('{{MODAL_CLASS_PARAM}}', \Str::camel($model['name']), $templateData);
@@ -60,13 +60,16 @@ Class ControllerGenerator extends BaseGenerator
     }
 
 
-    private function generateColumnSoft($fields)
+    private function generateColumnSoft($fields, $model)
     {
         $column = [];
         foreach ($fields as $index => $field) {
             if ($field['show'] && $field['sort']) {
                 $column[] = "'" . $field['field_name'] . "'";
             }
+        }
+        if ($this->serviceGenerator->getOptions(config('generator.model.options.sort_deletes'), $model['options'])) {
+            $fieldsGenerate[] = "'created_at'";
         }
 
         return implode($this->serviceGenerator->infy_nl_tab(0, 0) . ', ', $column);
