# public/swagger/swagger.json
@@ -23,6 +23,148 @@
         }
     ],
     "paths": {
+        "/test-generators": {
+            "get": {
+                "tags": [
+                    "TestGenerator"
+                ],
+                "summary": "List TestGenerator",
+                "responses": {
+                    "200": {
+                        "$ref": "#/components/responses/OK"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/Error"
+                    }
+                },
+                "security": [
+                    {
+                        "authApi": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "TestGenerator"
+                ],
+                "summary": "Create TestGenerator",
+                "requestBody": {
+                    "required": true
+                },
+                "responses": {
+                    "200": {
+                        "$ref": "#/components/responses/OK"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/Error"
+                    }
+                },
+                "security": [
+                    {
+                        "authApi": []
+                    }
+                ]
+            }
+        },
+        "/test-generators/{id}": {
+            "get": {
+                "tags": [
+                    "TestGenerator"
+                ],
+                "summary": "Update TestGenerator",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "$ref": "#/components/responses/OK"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/Error"
+                    }
+                },
+                "security": [
+                    {
+                        "authApi": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "TestGenerator"
+                ],
+                "summary": "Update TestGenerator",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/id"
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/TestGenerator"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "$ref": "#/components/responses/OK"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/Error"
+                    }
+                },
+                "security": [
+                    {
+                        "authApi": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "TestGenerator"
+                ],
+                "summary": "Delete TestGenerator",
+                "parameters": [
+                    {
+                        "$ref": "#/components/parameters/id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "$ref": "#/components/responses/OK"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFound"
+                    },
+                    "500": {
+                        "$ref": "#/components/responses/Error"
+                    }
+                },
+                "security": [
+                    {
+                        "authApi": []
+                    }
+                ]
+            }
+        },
         "/login": {
             "post": {
                 "tags": [
@@ -236,6 +378,142 @@
     },
     "components": {
         "schemas": {
+            "TestGenerator": {
+                "title": "TestGenerator",
+                "required": [],
+                "properties": {
+                    "int": {
+                        "title": "Int",
+                        "description": "",
+                        "type": "integer",
+                        "default": "NULL",
+                        "example": "0"
+                    },
+                    "big_int": {
+                        "title": "Big int",
+                        "description": "",
+                        "type": "integer",
+                        "default": "NULL",
+                        "example": "0"
+                    },
+                    "float": {
+                        "title": "Float",
+                        "description": "",
+                        "type": "number",
+                        "format": "float",
+                        "default": "NULL",
+                        "example": "0.1"
+                    },
+                    "double": {
+                        "title": "Double",
+                        "description": "",
+                        "type": "number",
+                        "format": "double",
+                        "default": "NULL",
+                        "example": "0.1"
+                    },
+                    "boolean": {
+                        "title": "Boolean",
+                        "description": "",
+                        "type": "boolean",
+                        "default": "NULL",
+                        "example": "0"
+                    },
+                    "date": {
+                        "title": "Date",
+                        "description": "",
+                        "type": "string",
+                        "default": "NULL",
+                        "example": "1996-02-17"
+                    },
+                    "date_time": {
+                        "title": "Date time",
+                        "description": "",
+                        "type": "string",
+                        "default": "NULL",
+                        "example": "1996-02-17 12:00:00"
+                    },
+                    "time": {
+                        "title": "Time",
+                        "description": "",
+                        "type": "string",
+                        "default": "NULL",
+                        "example": "12:00:00"
+                    },
+                    "year": {
+                        "title": "Year",
+                        "description": "",
+                        "type": "string",
+                        "default": "NULL",
+                        "example": "1996"
+                    },
+                    "varchar": {
+                        "title": "Varchar",
+                        "description": "",
+                        "type": "string",
+                        "default": "NULL",
+                        "example": "string"
+                    },
+                    "text": {
+                        "title": "Text",
+                        "description": "",
+                        "type": "string",
+                        "default": "NULL",
+                        "example": "string"
+                    },
+                    "long_text": {
+                        "title": "Long text",
+                        "description": "",
+                        "type": "string",
+                        "default": "NULL",
+                        "example": "string"
+                    },
+                    "enum": {
+                        "title": "Enum",
+                        "description": "",
+                        "type": "string",
+                        "default": "NULL",
+                        "enum": [
+                            1,
+                            2,
+                            3
+                        ],
+                        "example": "1"
+                    },
+                    "file": {
+                        "title": "File",
+                        "description": "",
+                        "type": "string",
+                        "default": "NULL",
+                        "example": "['https://lorempixel.com/150/150/?77253', 'https://lorempixel.com/150/150/?77253']"
+                    },
+                    "created_at": {
+                        "title": "Create date",
+                        "description": "",
+                        "type": "string",
+                        "format": "date-time",
+                        "default": "timestamp",
+                        "example": ""
+                    },
+                    "updated_at": {
+                        "title": "Update date",
+                        "description": "",
+                        "type": "string",
+                        "format": "date-time",
+                        "default": "timestamp",
+                        "example": ""
+                    },
+                    "deleted_at": {
+                        "title": "Delete date",
+                        "description": "",
+                        "type": "string",
+                        "format": "date-time",
+                        "default": "timestamp",
+                        "example": ""
+                    }
+                },
+                "type": "object"
+            },
             "User": {
                 "title": "User",
                 "required": [
